refactor: refactoring all layers, mapping dtos to entities and handling erros

--- a/Focus.Application/Focus.Application.csproj
+++ b/Focus.Application/Focus.Application.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Focus.Infra\Focus.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\Messages\" />
+  </ItemGroup>
+
 </Project>
