chore: added pre-made Dockerfile

--- a/Focus.API/Focus.API.csproj
+++ b/Focus.API/Focus.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c150fad7-c8c9-4176-aacb-6f70a4d24228</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Focus.Application\Focus.Application.csproj" />
     <ProjectReference Include="..\Focus.Infra\Focus.Infra.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 </Project>
