feat: added emailservice for the system focused on sending a confirmation email to user on creation of it. | refactor: creation of new fields on entity User for the utilization of email sending system. | refactor: appsettings to the server of email sending, Program.cs for dependences on IEmailService and EmailService

--- a/Focus.API/appsettings.json
+++ b/Focus.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "sandbox.smtp.mailtrap.io",
+    "Port": 25,
+    "SenderName": "Equipe Focus (Teste)",
+    "SenderEmail": "nao-responda@focus.com"
+  },
+  "FrontendUrls": {
+    "EmailVerification": "http://localhost:3000/verify-email?token=",
+    "PasswordReset": "http://localhost:3000/reset-password?token="
+  }
 }
