--- a/Focus.Application/Focus.Application.csproj
+++ b/Focus.Application/Focus.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Azure.Core" Version="1.46.2" />
     <PackageReference Include="LinqKit" Version="1.3.8" />
