--- a/Focus.API/appsettings.json
+++ b/Focus.API/appsettings.json
@@ -5,15 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "EmailSettings": {
-    "SmtpServer": "sandbox.smtp.mailtrap.io",
-    "Port": 25,
-    "SenderName": "Equipe Focus (Teste)",
-    "SenderEmail": "nao-responda@focus.com"
-  },
-  "FrontendUrls": {
-    "EmailVerification": "http://localhost:3000/verify-email?token=",
-    "PasswordReset": "http://localhost:3000/reset-password?token="
-  }
+  "AllowedHosts": "*"
 }
